--- a/style.css
+++ b/style.css
@@ -1,19 +1,29 @@
+body {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .container {
-  max-width: 400px;
+  max-width: 450px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: gray;
+  border-radius: 5px;
 }
 
 .display {
   padding: 15px;
   border: solid black 1px;
   text-align: right;
+  background-color: white;
 }
 
 .operators {
   display: flex;
-}
-.operators button {
-  font-size: 60px;
-  padding: 15px;
+  flex-wrap: wrap;
 }
 
 .digits {
@@ -21,7 +31,18 @@
   flex-wrap: wrap;
 }
 
-.digits button {
-  font-size: 50px;
-  padding: 20px;
+button {
+  min-width: 30%;
+  padding: 10px;
+  flex: 1;
+  background-color: white;
+  border: solid black 1px;
+}
+button:hover {
+  transform: scale(1.08);
+  box-shadow: inset 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+button:active {
+  background-color: rgba(200,200,200);
 }
